--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.0.0",
     "d3": "^7.8.5",
     "framer-motion": "^10.16.14",
+    "hooks": "^0.3.2",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
