--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "d3": "^7.8.5",
     "framer-motion": "^10.16.14",
     "hooks": "^0.3.2",
+    "js-yaml": "^4.1.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
