--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.14",
+    "@react-three/rapier": "^1.3.0",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.14.202",
     "@types/three": "^0.160.0",
