--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aleohq/sdk": "^0.6.9",
+    "@next/font": "^14.1.4",
     "@puzzlehq/sdk": "^0.2.5",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
